Get the longest matching name in class reference fixing.

--- a/test-resources/template/operations.xml
+++ b/test-resources/template/operations.xml
@@ -2,7 +2,7 @@
    <class title="helloWorld" visible="Protected">
       <operation name="myOp">
          <param name="oneParam">
-            <classRef name="helloWorld"></classRef>
+            <classRef name="helloWorld2"></classRef>
          </param>
       </operation>
    </class>
